--- a/contact.html
+++ b/contact.html
@@ -3,39 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>Contact</title>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-          <div class="col-sm-4">
-            <h2>About Me:</h2>
-            <h5>Photo of me:</h5>
-            <div class="fakeimg">Fake Image</div>
-            <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-            <h3>Some Links</h3>
-            <p>Lorem ipsum dolor sit ame.</p>
-            <ul class="nav nav-pills nav-stacked">
-              <li class="active"><a href="#">Link 1</a></li>
-              <li><a href="#">Link 2</a></li>
-              <li><a href="#">Link 3</a></li>
-            </ul>
-            <hr class="hidden-sm hidden-md hidden-lg">
+    <div class="jumbotron text-center" style="margin-bottom:0">
+        <h1>Clarence Guerrero</h1>
+    </div>
+      
+      <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+          <div class="navbar-header">
+              <!-- <a class="navbar-brand" href="#">WebSiteName</a> -->
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>                        
+            </button>
           </div>
-          <div class="col-sm-8">
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Dec 7, 2017</h5>
-            <div class="fakeimg">Fake Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-            <br>
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Sep 2, 2017</h5>
-            <div class="fakeimg">Fake Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+          <div class="collapse navbar-collapse" id="myNavbar">
+            <ul aligh="center" class="nav navbar-nav">
+              <li class="active"><a href="./index.html">About</a></li>
+              <li><a href="./portfolio.html">Portfolio</a></li>
+              <li><a href="./contact.html">Contact</a></li>
+            </ul>
           </div>
         </div>
-      </div>  
+      </nav>    
+
+    <h1>Contact</h1>
+    <main>
+    <div class="content"></div>
+    <img src="./Assets/Images/portfolio-wordguess.jpg" class="portfolioSettings" alt="word guess" />
+    <img src="./Assets/Images/portfolio-rpggame.jpg" class="portfolioSettings" alt="word guess" />
+    <img src="./Assets/Images/portfolio-trivia.jpg" class="portfolioSettings" alt="word guess" />
+    </main>
 </body>
 </html>
