--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul aligh="center" class="nav navbar-nav">
-        <li class="active"><a href="#">About</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Contact</a></li>
+        <li class="active"><a href="./index.html">About</a></li>
+        <li><a href="./portfolio.html">Portfolio</a></li>
+        <li><a href="./contact.html">Contact</a></li>
       </ul>
     </div>
   </div>
